# ptags.nvim

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  app.nix  flake.nix  impure-shell.nix  ptags  ptags.py  pyproject.toml  python.nix  run  setup  test.py  todo  todo.txt  uv2nix-shell.nix  venv.nix
.github/: README.md
dev/: build  edit  run
lua/: ptags.lua
python/: ptags.py  requirements.in  requirements.txt
src/: ptags.py
src/ptags_nvim/: __init__.py
