[project]
name = "ptags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Daniel Kuettel", email = "dkuettel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.9.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.2",
    "typer>=0.15.1",
]

[project.scripts]
ptags = "ptags:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
