[project]
name = "ptags"
version = "0.1.0"
description = "fully qualified python tags for vim"
readme = "README.md"
authors = [{ name = "Daniel Kuettel", email = "dkuettel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "tabulate",
    "tree-sitter",
    "tree-sitter-python",
    "typer",
]

[project.scripts]
ptags = "ptags:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptags.py"]

[tool.pyright]
typeCheckingMode = "recommended"
include = ["src"]
exclude = ["result", ".venv"]
reportUnusedCallResult = false
reportUnnecessaryComparison = false
